--- a/android/app/src/main/res/layout/activity_academician.xml
+++ b/android/app/src/main/res/layout/activity_academician.xml
@@ -8,7 +8,7 @@
     android:background="#EFEEF5"
     tools:context=".view.view.AcademicianActivity">
 
-
+    <!--Fragmentler için frame layout-->
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
@@ -127,7 +127,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
-                            android:text="Doktor Öğretim Üyesi"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="21sp"
                             android:textStyle="bold" />
@@ -137,7 +137,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="2dp"
-                            android:text="Başak TUNA"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="21sp"
                             android:textStyle="bold" />
@@ -147,7 +147,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:text="basaktuna@ahievran.edu.tr"
+                            android:text=""
                             android:textColor="#615C5C"
                             android:textSize="16sp" />
                     </LinearLayout>
@@ -673,7 +673,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_gravity="bottom"
         android:background="#FFFFFF"
         app:itemIconSize="22dp"
