--- a/android/app/src/main/res/layout/activity_preview.xml
+++ b/android/app/src/main/res/layout/activity_preview.xml
@@ -6,14 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EFEEF5"
-    android:fitsSystemWindows="true"
-    tools:context=".view.PreviewActivity">
+    tools:context=".view.view.PreviewActivity">
 
     <!--Header-->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView2"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
+        android:layout_height="70dp"
         app:cardBackgroundColor="#1A9AAF"
         app:cardCornerRadius="0dp"
         app:cardElevation="8dp"
@@ -23,19 +22,31 @@
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="13dp"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:text="Önizleme"
                 android:textColor="#FFFFFF"
                 android:textSize="15sp"
                 android:textStyle="bold" />
-        </RelativeLayout>
+
+            <View
+                android:layout_width="20dp"
+                android:layout_height="20dp" />
+        </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
     <!-- Scrollable içerik -->
@@ -132,7 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="17dp"
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="16dp"
@@ -158,9 +169,10 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/academicInfo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/akademikGecmis"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
 
@@ -262,9 +274,33 @@
                             app:srcCompat="@drawable/baseline_phone_24" />
 
                         <TextView
+                            android:id="@+id/phoneNum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="0(386)280-6059"
+                            android:text=""
+                            android:textColor="#000000"
+                            android:textSize="16sp" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginVertical="10dp"
+                        android:gravity="center"
+                        android:orientation="horizontal">
+
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="15dp"
+                            app:srcCompat="@drawable/baseline_contact_phone_24" />
+
+                        <TextView
+                            android:id="@+id/corporateNum"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="16sp" />
 
@@ -284,9 +320,10 @@
                             app:srcCompat="@drawable/baseline_email_24" />
 
                         <TextView
+                            android:id="@+id/email"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="basaktuna@ahievran.edu.tr"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="16sp" />
 
@@ -307,9 +344,10 @@
                             app:srcCompat="@drawable/baseline_location_on_24" />
 
                         <TextView
+                            android:id="@+id/districtAndProvince"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Merkez / Kırşehir"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="16sp" />
 
@@ -330,9 +368,10 @@
                             app:srcCompat="@drawable/baseline_language_24" />
 
                         <TextView
+                            android:id="@+id/web"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="https://unis.ahievran.edu.tr/akademisyen/basaktuna"
+                            android:text=""
                             android:textColor="#000000"
                             android:textSize="16sp" />
 
@@ -342,7 +381,7 @@
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
-            <!--Firma Bilgisi-->
+            <!-- Firma Bilgisi Kartı -->
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -352,53 +391,36 @@
                 app:cardBackgroundColor="@android:color/white"
                 app:cardCornerRadius="16dp"
                 app:cardElevation="2dp"
-                app:itemIconTint="@color/bottom_nav_icon_color"
-                app:itemTextColor="@color/bottom_nav_icon_color"
                 app:strokeColor="@android:color/transparent"
                 app:strokeWidth="0dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
                     android:orientation="vertical"
                     android:padding="10dp">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
                         android:text="Firma Bilgisi ve Çalışma Alanı"
                         android:textColor="#1A9AAF"
                         android:textSize="17sp"
                         android:textStyle="bold" />
 
+
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:id="@+id/firm"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="7dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/firmName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Firma İsmi"
-                            android:textStyle="bold"
-                            android:textColor="#000000"
-                            android:textSize="17sp" />
-
-                        <TextView
-                            android:id="@+id/firmWorkArea"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Firma çalışma alanı"
-                            android:textColor="#000000"
-                            android:textSize="15sp" />
-
-                    </LinearLayout>
-
+                        android:orientation="vertical" />
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
+
 
             <!--Uzmanlık Alanları-->
             <com.google.android.material.card.MaterialCardView
@@ -432,39 +454,15 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/profession"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Polimer işleme teknolojileri"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nanokompozit üretimi"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Plastik geri dönüşümü"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Farmasötük teknoloji ve ilaç formülasyonu"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Kozmotoloji ve ileri malzeme teknolojileri"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -501,19 +499,14 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/consultancyFields"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Polimer işleme teknolojileri"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nanokompozit üretimi"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -550,25 +543,15 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/previousConsultancy"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="TÜBİTAK 1501,1507,1512 projeleri için hakemlik ve değerlendirme süreçleri"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Avrupa Birliği Projeleri(Eureka,M-ERA.NET) için panel üyeliği"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sanayi iş birlikleri kapsamında malzeme geliştirme ve analiz çalışmaları"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -596,7 +579,6 @@
                     android:orientation="vertical"
                     android:padding="10dp">
 
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -606,37 +588,12 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/educations"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Polimer işleme teknolojileri"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Nanokompozit üretimi"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Plastik geri dönüşümü"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="İlaç mühendisliği"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Kozmetoloji"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
 
@@ -675,27 +632,14 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/prevEducations"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Polimer ve nanokompozti üretimi üzerine lisan ve lisanüstü dersler"
+                        android:layout_marginTop="5dp"
+                        android:lineSpacingExtra="7dp"
+                        android:text=""
                         android:textColor="#000000"
                         android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="TÜBİTAK ve Avrupa Birliği destek programları kapsamında araştırmacalara yönelik eğitimler"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sektörel eğitimler ve danışmanlıklar"
-                        android:textColor="#000000"
-                        android:textSize="16sp" />
-
-
 
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
@@ -708,7 +652,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:background="#FFFFFF"
         app:itemIconSize="22dp"
         app:itemIconTint="#1A9AAF"
