--- a/android/app/src/main/res/layout/fragment_firm_info.xml
+++ b/android/app/src/main/res/layout/fragment_firm_info.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#EFEEF5"
     tools:context=".view.view.FirmInfoFragment">
 
@@ -22,14 +22,6 @@
         app:strokeColor="@android:color/transparent"
         app:strokeWidth="0dp">
 
-        <ImageView
-            android:id="@+id/goToBack"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="13dp"
-            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
 
         <TextView
             android:layout_width="match_parent"
@@ -94,22 +86,60 @@
                     tools:layout_editor_absoluteX="35dp"
                     tools:layout_editor_absoluteY="211dp" />
 
-                <EditText
-                    android:id="@+id/firmWorkArea"
-                    android:layout_width="360dp"
-                    android:layout_height="54dp"
-                    android:layout_gravity="center"
-                    android:layout_marginVertical="7dp"
-                    android:background="@drawable/edittext_bg"
-                    android:hint="Firma Çalışma Alanı"
-                    android:inputType="text"
-                    android:padding="12dp"
-                    android:textColor="#000000"
-                    android:textColorHint="#999999"
-                    android:textSize="16sp"
-                    android:textStyle="normal"
-                    tools:layout_editor_absoluteX="35dp"
-                    tools:layout_editor_absoluteY="211dp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/firmWorkArea"
+                        android:layout_width="300dp"
+                        android:layout_height="54dp"
+                        android:layout_gravity="center"
+                        android:layout_marginVertical="7dp"
+                        android:background="@drawable/edittext_bg"
+                        android:hint="Firma Çalışma Alanı"
+                        android:inputType="text"
+                        android:padding="12dp"
+                        android:textColor="#000000"
+                        android:textColorHint="#999999"
+                        android:textSize="16sp"
+                        android:textStyle="normal"
+                        tools:layout_editor_absoluteX="35dp"
+                        tools:layout_editor_absoluteY="211dp" />
+
+                    <Button
+                        android:id="@+id/addFirmWorkArea"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_gravity="center"
+                        android:backgroundTint="#1A9AAF"
+                        android:elevation="8dp"
+                        android:fontFamily="monospace"
+                        android:gravity="center"
+                        android:text="+"
+                        android:textColor="#FFFFFF"
+                        android:textSize="25sp"
+                        android:textStyle="bold"
+                        android:translationZ="4dp"
+                        app:cornerRadius="11dp" />
+
+
+                </LinearLayout>
+
+                <com.google.android.flexbox.FlexboxLayout
+                    android:id="@+id/workAreaTagContainer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center_horizontal"
+                    android:padding="4dp"
+                    app:flexWrap="wrap"
+                    app:justifyContent="center"
+                    tools:ignore="MissingClass" />
+
 
                 <Button
                     android:id="@+id/addFirmInfo"
@@ -138,7 +168,7 @@
                     android:text="Firma Bilgilerim"
                     android:textColor="#000000"
                     android:textSize="16sp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <LinearLayout
                     android:id="@+id/firmContainer"
@@ -150,9 +180,9 @@
                         android:id="@+id/txtNoFirm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="15sp"
+                        android:text="📭 Henüz hiç firma bilgisi eklenmemiş"
                         android:textColor="#626161"
-                        android:text="📭 Henüz hiç firma bilgisi eklenmemiş"/>
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
